--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 /node_modules
 /src/assets/videos
-.angular/cache/15.2.10/babel-webpack/
-.angular/cache/15.2.10/angular-webpack/
+.angular/cache/15.2.10/
