--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.2",
+    "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
+    "ng-multiselect-dropdown": "^1.0.0",
     "ngx-cookie-service": "^15.0.0",
     "ngx-mat-select-search": "^7.0.5",
     "rxjs": "~7.8.0",
@@ -33,6 +35,7 @@
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/crypto-js": "^4.2.1",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.5.0",
