--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
     "ng-multiselect-dropdown": "^1.0.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-cookie-service": "^15.0.0",
     "ngx-mat-select-search": "^7.0.5",
     "rxjs": "~7.8.0",
