--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "angular2-multiselect-dropdown": "^5.0.0",
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
@@ -27,6 +28,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-cookie-service": "^15.0.0",
     "ngx-mat-select-search": "^7.0.5",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
     "tslib": "^2.3.0",
